--- a/templates/uikit/inputTypes/select-radio-inline/select-radio-inline.html
+++ b/templates/uikit/inputTypes/select-radio-inline/select-radio-inline.html
@@ -1,8 +1,8 @@
 <template name="afRadioGroupInline_uikit">
-  <div class="uk-form-controls">
+  <div class="uk-form-controls" {{dsk}}>
     {{#each this.items}}
     <span>
-      <input type="radio" value="{{this.value}}" {{itemAtts}} />
+      <input type="radio" value="{{this.value}}" {{atts}} />
       <label for="{{itemAtts.id}}">{{this.label}}</label>
     </span>
     {{/each}}
