--- a/templates/uikit/inputTypes/date/date.html
+++ b/templates/uikit/inputTypes/date/date.html
@@ -1,3 +1,3 @@
 <template name="afInputDate_uikit">
-  <input type="date" value="{{this.value}}" {{atts}} data-uk-datepicker="{format:'DD.MM.YYYY'}"/>
+  <input type="date" value="{{this.value}}" {{atts}}/>
 </template>
