--- a/templates/uikit/inputTypes/datetime-local/datetime-local.html
+++ b/templates/uikit/inputTypes/datetime-local/datetime-local.html
@@ -1,3 +1,3 @@
 <template name="afInputDateTimeLocal_uikit">
-  <input type="datetime-local" value="{{this.value}}" {{atts}} data-uk-datepicker="{format:'DD.MM.YYYY'}"/>
+  <input type="datetime-local" value="{{this.value}}" {{atts}}/>
 </template>
